# LiveWhisperGUI

./: .gitignore  README.md  pyproject.toml  requirements.txt
live_whisper_gui/: __main__.py  settings.py
live_whisper_gui/gui/: main.py  mixins.py  threads.py  widgets.py
live_whisper_gui/gui/windows/: init.py  main.py
live_whisper_gui/live_whisper/: main.py  mediactl.py  model_download.py
